# rangemap

./: Cargo.toml  README.fuzz.md  README.md
benches/: kitchen_sink.rs
examples/: roster.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: segmap_coalesce.rs
src/: bounds.rs  iterators.rs  key.rs  lib.rs  map.rs  old_map.rs  range.rs  segment.rs  set.rs  stupid_range_map.rs  tests.rs
src/map/: iterators.rs  key.rs  tests.rs
src/segment/: bounds.rs
src/set/: iterators.rs  ops.rs  tests.rs
src/set/ops/: difference.rs  intersection.rs  mod.rs  symmetric_difference.rs  union.rs
